--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-portfolio</title>
+    <title>Websight</title>
+    <!-- lagay natin dito na script na nagrread ano page naka open (home/ services etc) -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
